--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,38 +1,102 @@
 <!DOCTYPE html>
+<html>
+<head>
 <meta charset="utf-8">
-<style>
+<title>Point on a map D3</title>
 
-.brush .selection {
-  fill: none;
-}
+<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+<script src="http://d3js.org/topojson.v1.min.js"></script>
 
+<style type="text/css">
+	.feature {
+		fill: none;
+		stroke: grey;
+		stroke-width: 1px;
+  		stroke-linejoin: round;
+	}
+	.mesh {
+		fill: none;
+  		stroke: lightgrey;
+  		stroke-width: 2px;
+  		stroke-linejoin: round;
+	}
+	h1 {
+		font-family: sans-serif;
+	}
 </style>
-<svg width="960" height="1452">
-  <filter id="monochrome"><feColorMatrix type="saturate" values="0"></feColorMatrix></filter>
-  <defs><image id="image" width="100%" height="100%" xlink:href="https://news.artnet.com/app/news-upload/2014/12/Mona-Lisa-Zhao-Benshan.jpg"></image></defs>
-  <use id="monochrome-image" filter="url(#monochrome)" xlink:href="#image"></use>
-  <use id="color-image" xlink:href="#image"></use>
-</svg>
-<script src="https://d3js.org/d3.v4.min.js"></script>
-<script>
+</head>
+<body>
+	<h1>Point in the north west part of SF</h1>
 
-var brush = d3.brush();
 
-var svg = d3.select("svg");
+<script type="text/javascript">
 
-svg.append("g")
-    .attr("class", "brush")
-    .call(brush)
-    .call(brush.move, [[307, 167], [611, 539]])
-  .select(".selection")
-    .attr("id", "brush-selection");
+var width = 950,
+    height = 550;
 
-svg.append("clipPath")
-    .attr("id", "brush-clip")
-  .append("use")
-    .attr("xlink:href", "#brush-selection");
+// set projection
+var projection = d3.geo.mercator();
 
-svg.select("#color-image")
-    .attr("clip-path", "url(#brush-clip)");
+// create path variable
+var path = d3.geo.path()
+    .projection(projection);
+
+function transformPointReversed(topology, position) {
+    position = position.slice();
+    position[0] = (position[0] - topology.transform.translate[0])
+    /(topology.transform.scale[0]),
+    position[1] = (position[1] - topology.transform.translate[1])
+    /(topology.transform.scale[1])
+    return position;
+};
+
+
+d3.json("https://gist.githubusercontent.com/mbostock/4090846/raw/d534aba169207548a8a3d670c9c2cc719ff05c47/us.json", function(error, topo) { console.log(topo);
+
+  	states = topojson.feature(topo, topo.objects.states).features
+
+  	// set projection parameters
+  	projection
+      .scale(700)
+      .center([-106, 37.5])
+
+    // create svg variable
+    var svg = d3.select("body").append("svg")
+    				.attr("width", width)
+    				.attr("height", height);
+
+    // points
+  aa = [-122.490402, 37.786453];
+	bb = [-122.389809, 37.72728];
+
+	console.log(projection(aa),projection(bb));
+
+	// add states from topojson
+	svg.selectAll("path")
+      .data(states).enter()
+      .append("path")
+      .attr("class", "feature")
+      .style("fill", "steelblue")
+      .attr("d", path);
+
+    // put boarder around states
+  	svg.append("path")
+      .datum(topojson.mesh(topo, topo.objects.states, function(a, b) { return a !== b; }))
+      .attr("class", "mesh")
+      .attr("d", path);
+
+    // add circles to svg
+    svg.selectAll(".geojson")
+		.data([aa,bb]).enter()
+		.append("circle")
+		.attr("cx", function (d) { console.log(projection(d)); return projection(d)[0]; })
+		.attr("cy", function (d) { return projection(d)[1]; })
+		.attr("r", "8px")
+		.attr("fill", "red")
+
+});
 
 </script>
+
+</body>
+</html>
