--- a/views/index.ejs
+++ b/views/index.ejs
@@ -65,9 +65,6 @@ d3.json("https://gist.githubusercontent.com/mbostock/4090846/raw/d534aba16920754
     				.attr("width", width)
     				.attr("height", height);
 
-    // points
-  aa = [-122.490402, 37.786453];
-	bb = [-122.389809, 37.72728];
 
 	console.log(projection(aa),projection(bb));
 
@@ -85,14 +82,23 @@ d3.json("https://gist.githubusercontent.com/mbostock/4090846/raw/d534aba16920754
       .attr("class", "mesh")
       .attr("d", path);
 
-    // add circles to svg
-    svg.selectAll(".geojson")
-		.data([aa,bb]).enter()
-		.append("circle")
-		.attr("cx", function (d) { console.log(projection(d)); return projection(d)[0]; })
-		.attr("cy", function (d) { return projection(d)[1]; })
-		.attr("r", "8px")
-		.attr("fill", "red")
+      var data = [];
+      d3.csv("ufo_sighting_data.csv", function(csvData){
+        data = csvData;
+        // Call a function now you have the data ready
+        addCircles(data);
+      })
+
+    function addCircles(data) {
+      // add circles to svg
+      svg.selectAll(".geojson")
+      .data(data).enter()
+      .append("circle")
+      .attr("cx", function (d) { console.log(projection(d)); return projection(d)[0]; })
+      .attr("cy", function (d) { return projection(d)[1]; })
+      .attr("r", "8px")
+      .attr("fill", "red")
+    }
 
 });
 
