--- a/views/index.ejs
+++ b/views/index.ejs
@@ -66,8 +66,6 @@ d3.json("https://gist.githubusercontent.com/mbostock/4090846/raw/d534aba16920754
     				.attr("height", height);
 
 
-	console.log(projection(aa),projection(bb));
-
 	// add states from topojson
 	svg.selectAll("path")
       .data(states).enter()
@@ -82,19 +80,30 @@ d3.json("https://gist.githubusercontent.com/mbostock/4090846/raw/d534aba16920754
       .attr("class", "mesh")
       .attr("d", path);
 
-      var data = [];
-      d3.csv("ufo_sighting_data.csv", function(csvData){
+			// aa = [-122.490402, 37.786453];
+ 		// 	bb = [-122.389809, 37.72728];
+			// console.log("AA.BB ORIGINAL");
+			// console.log([aa,bb]);
+
+			data = []
+      d3.csv("data/test.csv", function(csvData){
         data = csvData;
-        // Call a function now you have the data ready
-        addCircles(data);
+
+				data.forEach(function(d) {
+					startCircle = [d.longitude - 0.01, d.latitude - 0.01]
+					endCircle = [d.longitude - 0.1, d.latitude - 0.1]
+	        // Call a function now you have the data ready
+	        addCircles([startCircle, endCircle]);
+				})
       })
+
 
     function addCircles(data) {
       // add circles to svg
       svg.selectAll(".geojson")
       .data(data).enter()
       .append("circle")
-      .attr("cx", function (d) { console.log(projection(d)); return projection(d)[0]; })
+      .attr("cx", function (d) { return projection(d)[0]; })
       .attr("cy", function (d) { return projection(d)[1]; })
       .attr("r", "8px")
       .attr("fill", "red")
